--- a/.gitignore
+++ b/.gitignore
@@ -8,22 +8,28 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+bin/
 build/
 develop-eggs/
 dist/
 downloads/
 eggs/
 .eggs/
+include/
 lib/
-lib64/
+lib64
 parts/
+scripts/
 sdist/
 var/
 wheels/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
+.venv
 *.egg
+pip-selfcheck.json
+pyvenv.cfg
 MANIFEST
 
 # PyInstaller
