--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ matplotlib==3.3.2
 numpy==1.19.4
 pandas==1.1.4
 Pillow==8.0.1
+pkg-resources==0.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytorch-msssim==0.2.1
 pytz==2020.4
 six==1.15.0
 torch==1.7.0
